...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serviceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Input -->
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_optional"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Special Symbols Checkbox -->
...
            android:text="@string/password_length_16"
            android:layout_marginTop="4dp"
            android:textSize="16sp" />

        <!-- Generate Password Button -->
        <Button
            android:id="@+id/generatePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_password"
            android:layout_marginTop="16dp" />

        <!-- Save Password Button -->
        <Button
            android:id="@+id/savePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_password"
            android:layout_marginTop="8dp" />
    </LinearLayout>

...
